--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@
 # Ignore bundler config
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
@@ -18,3 +15,4 @@
 *.pyo
 config/database.yml
 config/environment.rb
+public/volumes/*
