--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 *.class
 *.pyc
 *.pyo
-/config/database.yml
-/config/environment.rb
-/public/volumes/*
-/public/thumbs
-/Gemfile.lock
+config/database.yml
+config/environment.rb
+public/volumes/*
+public/thumbs/*
+Gemfile.lock
